--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="bg">#E5E5E5</color>
     <color name="ash">#D0CECF</color>
+    <color name="blue">#0000ff</color>
 
 </resources>
