--- a/app/src/main/res/layout/activity_driver_login.xml
+++ b/app/src/main/res/layout/activity_driver_login.xml
@@ -14,10 +14,10 @@
         android:text="@string/login_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wc_login"
-        app:layout_constraintVertical_bias="0.608" />
+        app:layout_constraintVertical_bias="0.538" />
 
     <TextView
         android:id="@+id/wc_login"
@@ -64,7 +64,7 @@
         app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password"
+            android:id="@+id/reg_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
@@ -85,14 +85,15 @@
         app:layout_constraintHorizontal_bias="0.228"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
-        app:layout_constraintVertical_bias="0.110000014" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/new_account"
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="216dp"
         android:layout_height="42dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="64dp"
+        android:onClick="registerUser"
         android:text="@string/new_account"
         android:textColor="@color/black"
         android:textSize="12dp"
