--- a/app/src/main/res/layout/activity_register_driver.xml
+++ b/app/src/main/res/layout/activity_register_driver.xml
@@ -145,14 +145,14 @@
         android:id="@+id/alredy_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="76dp"
+        android:clipToOutline="true"
         android:onClick="loginUser"
         android:text="@string/alredy_account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        android:clipToOutline="true" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
