--- a/app/src/main/res/layout/activity_leave_request.xml
+++ b/app/src/main/res/layout/activity_leave_request.xml
@@ -141,14 +141,27 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/request_leave"
+        android:id="@+id/request_leave2"
         android:layout_width="325dp"
         android:layout_height="49dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="36dp"
         android:text="@string/register_driver"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />
+
+    <Button
+        android:id="@+id/request_cancel"
+        android:layout_width="325dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="@color/white"
+        android:text="@string/request_cancel"
+        android:textColor="@color/BlueAsh"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/request_leave2"
+        android:shadowRadius="@integer/material_motion_duration_medium_1" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
