--- a/app/src/main/res/layout/activity_driver_login.xml
+++ b/app/src/main/res/layout/activity_driver_login.xml
@@ -18,7 +18,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wc_login"
         app:layout_constraintVertical_bias="0.538"
-        android:onClick="contentView" />
+        android:onClick="contentView"
+        android:backgroundTint="@color/blue" />
 
     <TextView
         android:id="@+id/wc_login"
