--- a/app/src/main/res/layout/activity_register_driver.xml
+++ b/app/src/main/res/layout/activity_register_driver.xml
@@ -85,7 +85,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/date_leave_start"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/lic_no" />
@@ -103,7 +103,7 @@
         app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/date_leave_end"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/reg_password"
@@ -124,7 +124,7 @@
         app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/confirm_password"
+            android:id="@+id/route_area"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/confirm_password"
