--- a/app/src/main/res/layout/activity_driver_content.xml
+++ b/app/src/main/res/layout/activity_driver_content.xml
@@ -7,28 +7,16 @@
     android:background="@drawable/content"
     tools:context=".driver_content">
 
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="164dp"
-        android:layout_height="119dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/champion" />
-
     <ImageButton
         android:id="@+id/leaveRequest"
         android:layout_width="342dp"
         android:layout_height="145dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="190dp"
         android:background="@color/white"
-        android:onClick="leaveRequest"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/leave" />
 
     <ImageButton
@@ -58,50 +46,39 @@
         android:id="@+id/user_name_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="120dp"
         android:text="@string/user_name_profile"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/leaveRequest"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
-
-    <ImageView
-        android:id="@+id/user_image"
-        android:layout_width="83dp"
-        android:layout_height="87dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
-        app:layout_constraintEnd_toEndOf="@+id/imageView11"
-        app:layout_constraintHorizontal_bias="0.54"
-        app:layout_constraintStart_toStartOf="@+id/imageView11"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/google" />
+        app:layout_constraintHorizontal_bias="0.092"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageButton
         android:id="@+id/imageButton7"
         android:layout_width="48dp"
         android:layout_height="37dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="#D7EFF3"
+        android:background="#3BA5BB"
+        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.769"
         app:srcCompat="@drawable/ic_alert" />
 
     <ImageButton
-        android:id="@+id/imageButton10"
-        android:layout_width="42dp"
-        android:layout_height="34dp"
-        android:layout_marginBottom="76dp"
+        android:id="@+id/logout_btn"
+        android:layout_width="47dp"
+        android:layout_height="37dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="28dp"
         android:background="#3BA5BB"
         app:layout_constraintBottom_toTopOf="@+id/leaveRequest"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.731"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
+        app:layout_constraintHorizontal_bias="0.984"
+        app:layout_constraintStart_toEndOf="@+id/route"
         app:srcCompat="@drawable/ic_baseline_exit_to_app_24" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -110,5 +87,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="27dp" />
+
+    <TextView
+        android:id="@+id/route"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        android:textColor="@color/BlueAsh"
+        android:textSize="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/user_name_profile" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
