--- a/app/src/main/res/layout/activity_driver_login.xml
+++ b/app/src/main/res/layout/activity_driver_login.xml
@@ -67,7 +67,7 @@
         app:startIconDrawable="@drawable/ic_lock">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/user_password"
+            android:id="@+id/date_end"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/password"
