--- a/app/src/main/res/layout/activity_register_driver.xml
+++ b/app/src/main/res/layout/activity_register_driver.xml
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email"
+            android:id="@+id/reason_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/reg_email" />
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/route"
+            android:id="@+id/pno_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/route" />
@@ -126,7 +126,7 @@
         app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/con_passsword"
+            android:id="@+id/route_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/confirm_password"
