--- a/app/src/main/res/layout/activity_leave_content.xml
+++ b/app/src/main/res/layout/activity_leave_content.xml
@@ -52,8 +52,48 @@
         android:layout_below="@+id/gawsan"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="-2dp"
         android:layout_marginTop="-2dp"
         android:layout_marginBottom="1dp">
+
+        <!--filter-->
+
+        <EditText
+            android:id="@+id/searchLeave_btn"
+            android:layout_width="322dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:background="@color/white"
+            android:drawableStart="@drawable/ic_search"
+            android:drawablePadding="10dp"
+            android:hint="Search"
+            android:padding="10dp" />
+
+        <ImageView
+            android:id="@+id/filterLeave"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_alignEnd="@+id/searchLeave_btn"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="-76dp"
+            android:background="@null"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_gray_dash" />
+        <!--recyclerView-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/leaveRv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/searchLeave_btn"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="5dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/single_leave_view" />
 
     </RelativeLayout>
 
