--- a/app/src/main/res/layout/single_leave_view.xml
+++ b/app/src/main/res/layout/single_leave_view.xml
@@ -20,7 +20,7 @@
             android:layout_marginLeft="10dp"
             android:text="t1"
             android:textColor="#000"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -31,7 +31,7 @@
             android:layout_marginLeft="10dp"
             android:text="t2"
             android:textColor="#000"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
         <TextView
@@ -42,7 +42,7 @@
             android:layout_marginLeft="10dp"
             android:text="t3"
             android:textColor="#000"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
         <TextView
@@ -53,7 +53,7 @@
             android:layout_marginLeft="10dp"
             android:text="t3"
             android:textColor="#000"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
         <ImageView
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/startDate"
             android:layout_marginLeft="350dp"
-            android:src="@drawable/ic_baseline_navigate_next_24" />
+            android:src="@drawable/ic_50" />
 
 
     </RelativeLayout>
