--- a/app/src/main/res/layout/leave_view.xml
+++ b/app/src/main/res/layout/leave_view.xml
@@ -1,6 +1,128 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!--Bottom sheet layout to display details and edit/delete options-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:id="@+id/toolbarRL"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#BDE2EA"
+        android:padding="10dp">
+
+        <ImageButton
+            android:id="@+id/backward_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@null"
+            android:src="@drawable/ic_back_gray" />
+
+
+        <ImageButton
+            android:id="@+id/delete_Btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:background="@null"
+            android:src="@drawable/delete" />
+
+
+        <ImageButton
+            android:id="@+id/edit_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_toStartOf="@+id/delete_Btn"
+            android:background="@null"
+            android:src="@drawable/edit" />
+
+
+        <TextView
+            android:id="@+id/nameTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="2dp"
+            android:background="@null"
+            android:text="Leave Details"
+            android:textColor="@color/BlueAsh"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+    </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/icon_leave"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:adjustViewBounds="true"
+        android:background="#BDE2EA"
+        android:src="@mipmap/ic_launcher" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/icon_leave"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/driver_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name of the driver"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/leave_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reason of the leave "
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingEnd="5dp" />
+
+        <TextView
+            android:id="@+id/p_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Phone number"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingEnd="5dp" />
+
+        <TextView
+            android:id="@+id/date_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date start"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingEnd="5dp" />
+
+        <TextView
+            android:id="@+id/date_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date end "
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingEnd="5dp" />
+
+        <TextView
+            android:id="@+id/route"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reason of leave"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:paddingEnd="5dp" />
+
+
+    </LinearLayout>
+
+
+</RelativeLayout>
