--- a/app/src/main/res/layout/activity_edit_leave.xml
+++ b/app/src/main/res/layout/activity_edit_leave.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/reg"
-    tools:context=".leave_request">
+    tools:context=".EditLeave">
 
     <TextView
         android:id="@+id/wc_leave"
@@ -14,7 +14,7 @@
         android:layout_marginTop="32dp"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
-        android:text="@string/wc_leave"
+        android:text="Update Leave"
         android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -147,12 +147,12 @@
         android:layout_height="49dp"
         android:layout_marginTop="28dp"
         android:backgroundTint="@color/blue"
-        android:text="@string/register_driver"
+        android:text="Update"
+        android:textStyle="bold"
+        app:layout_constraintCircleRadius="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
-        android:textStyle="bold"
-        app:layout_constraintCircleRadius="6dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />
 
     <Button
         android:id="@+id/request_cancel"
